<resources>
    <string name="app_name">Sumbission1_Dicoding</string>
    <string name="description_text">Once home to the most advanced civilization on Earth,
            Atlantis is now an underwater kingdom ruled by the power-hungry King Orm.
            With a vast army at his disposal, Orm plans to conquer the remaining oceanic people
            and then the surface world. Standing in his way is Arthur Curry,
            Orm\'s half-human, half-Atlantean brother and true heir to the throne.</string>
    <string name="txt_detail_category">Category : </string>
    <string name="txt_detail_release_date">Release Date : </string>
    <string name="txt_detail_director">Director : </string>
    <string name="txt_detail_shared">Shared By : MovieCatalog Application By Adjie Kurniawan</string>
    <string name="txt_detail_subject">Movie Detail</string>
    <string name="txt_detail_title">Share Via</string>
    <string name="txt_detail_clicked">Anda Menyukai Film </string>
    <string name="poster_cover_description">poster_cover</string>
    <string name="poster_image_description">poster_image_description</string>
    <string name="poster_title_movie_text">The Jungle Book (2016)</string>
    <string name="poster_duration_text">150 menit</string>
    <string name="poster_release_date_text">Release Date : 19 October 2018 (Indonesia)</string>
    <string name="poster_director_text">Director : Bradley Cooper</string>
    <string name="poster_category_text">Adventure, Drama, Familty</string>
    <string name="poster_rating_text">4.0</string>
    <string name="poster_rating_count_text">/5</string>
    <string name="poster_description_text">Description</string>
    <string name="toolbar_title">Trending Movies</string>
    <string name="toolbar_description">Trending Movies in Medan</string>
    <string name="item_movie_title">Aquaman</string>
    <string name="item_movie_duration">150 menit</string>
    <string name="item_movie_category">Adventure, Drama, Familty</string>
    <string name="item_movie_description">Description</string>
    <string name="menu_share">Share</string>
    <string-array name="data_movie">

        <item>Aquaman</item>
        <item>A Star Is Born</item>
        <item>Avengers Infinity War</item>
        <item>Bumblebee</item>
        <item>Dragon Ball Super: Broly</item>
        <item>Bird Box</item>
        <item>Bohemian Rhapsody</item>
        <item>Creed II</item>
        <item>Once Upon a Deadpool</item>
        <item>How to Train Your Dragon: The Hidden World</item>
        <item>Glass</item>
        <item>Hunter Killer</item>
        <item>Mary Poppins Returns</item>
        <item>Mortal Engines</item>
        <item>Preman Pensiun</item>
        <item>Robin Hood</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>The Girl in the Spider\'s Web</item>
        <item>The Mule</item>
        <item>Venom</item>

    </string-array>
    <string-array name="data_cover">
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_a_star</item>
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_dragonball</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_dragon</item>
        <item>@drawable/poster_glass</item>
        <item>@drawable/poster_hunterkiller</item>
        <item>@drawable/poster_marrypopins</item>
        <item>@drawable/poster_mortalengine</item>
        <item>@drawable/poster_preman</item>
        <item>@drawable/poster_robinhood</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_thegirl</item>
        <item>@drawable/poster_themule</item>
        <item>@drawable/poster_venom</item>
    </string-array>
    <string-array name="data_duration">
        <item>143 menit</item>
        <item>136 menit</item>
        <item>149 menit</item>
        <item>114 menit</item>
        <item>100 menit</item>
        <item>124 menit</item>
        <item>134 menit</item>
        <item>130 menit</item>
        <item>117 menit</item>
        <item>104 menit</item>
        <item>129 menit</item>
        <item>122 menit</item>
        <item>130 menit</item>
        <item>128 menit</item>
        <item>94 menit</item>
        <item>116 menit</item>
        <item>117 menit</item>
        <item>115 menit</item>
        <item>116 menit</item>
        <item>112 menit</item>
    </string-array>
    <string-array name="data_category">
        <item>Action, Adventure, Fantasy</item>
        <item>Drama, Music, Romance</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Animation, Action, Adventure</item>
        <item>Drama, Horror, Sci-Fi</item>
        <item>Biography, Drama, Music</item>
        <item>Drama, Sport</item>
        <item>Action, Adventure, Sci-Fi</item>
        <item>Animation, Action, Adventure</item>
        <item>Drama, Sci-Fi, Thriller</item>
        <item>Action, Thriller</item>
        <item>Comedy, Family, Fantasy</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Comedy, Drama</item>
        <item>Action, Adventure, Thriller</item>
        <item>Animation, Action, Adventure</item>
        <item>Action, Crime, Drama</item>
        <item>Crime, Drama, Thriller</item>
        <item>Action, Sci-Fi, Thriller</item>
    </string-array>
    <string-array name="data_rating">
        <item>4.5</item>
        <item>3</item>
        <item>4.5</item>
        <item>3.9</item>
        <item>3.4</item>
        <item>3.3</item>
        <item>4.0</item>
        <item>3.6</item>
        <item>3.6</item>
        <item>3.8</item>
        <item>3.4</item>
        <item>3.3</item>
        <item>3.45</item>
        <item>3.05</item>
        <item>4.0</item>
        <item>2.65</item>
        <item>4.25</item>
        <item>3.05</item>
        <item>3.55</item>
        <item>3.35</item>
    </string-array>
    <string-array name="data_release_date_long">
        <item> 12 December 2018 (Indonesia)</item>
        <item> 19 October 2018 (Indonesia)</item>
        <item> 25 April 2018 (Indonesia)</item>
        <item> 19 December 2018 (Indonesia)</item>
        <item> 20 February 2019 (Indonesia)</item>
        <item> 21 December 2018 (USA)</item>
        <item> 30 October 2018 (Indonesia)</item>
        <item> 28 November 2018 (Indonesia)</item>
        <item> 15 Mei 2018 (Indonesia)</item>
        <item> 9 January 2019 (Indonesia)</item>
        <item> 16 January 2019 (Indonesia)</item>
        <item> 24 October 2018 (Indonesia)</item>
        <item> 25 December 2018 (Indonesia)</item>
        <item> 5 December 2018 (Indonesia)</item>
        <item> 17 January 2019 (Indonesia)</item>
        <item> 20 November 2018 (Indonesia)</item>
        <item> 14 December 2018 (Indonesia)</item>
        <item> 16 November 2018 (Indonesia)</item>
        <item> 30 January 2019 (Indonesia)</item>
        <item> 3 October 2018 (Indonesia)</item>
    </string-array>
    <string-array name="data_release_date_short">
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2019)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2019)</item>
        <item> (2019)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2019</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2018)</item>
        <item> (2019)</item>
        <item> (2019)</item>
    </string-array>
    <string-array name="data_director">
        <item> James Wan</item>
        <item> Bradley Cooper</item>
        <item> Anthony Russo, Joe Russo</item>
        <item> Travis Knight</item>
        <item> Tatsuya Nagamine</item>
        <item> Susanne Bier</item>
        <item> Bryan Singer</item>
        <item> Steven Caple Jr.</item>
        <item> David Leitch</item>
        <item> Dean DeBlois</item>
        <item> M. Night Shyamalan</item>
        <item> Donovan Marsh</item>
        <item> Rob Marshall</item>
        <item> Christian Rivers</item>
        <item> Aris Nugraha</item>
        <item> Otto Bathurst</item>
        <item> Bob Persichetti, Peter Ramsey, Rodney Rothman</item>
        <item> Fede Alvarez</item>
        <item> Clint Eastwood</item>
        <item> Ruben Fleischer</item>
    </string-array>
</resources>